<resources>
    <string name="app_name">Messenger</string>
    <string name="action_settings">Ajustes</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="ContactTab">Contactos</string>
    <string name="MessageTab">Messages</string>
    <string name="title_activity_message_text">MessageText</string>
    <string name="title_activity_maps">Map</string>
    <string name="delete_multimedia">Eliminar</string>
    <string name="share_multimedia">Compartir</string>
    <string name="Open_File">Open File</string>
    <string name="file_pick">Documento</string>
    <string name="audio_pick">Audio</string>
    <string name="gallery_pick">Galería</string>
    <string name="send_pick">ENVIAR</string>
    <string name="count_select_pick">" seleccionados"</string>
    <string name="tale_empty">Añade archivos a tu dispositivo para compartir con tus amigos.</string>
    <string name="single_select_item">Seleccionado</string>
    <string name="Image_Title">Imagenes</string>
    <string name="Videos_Title">Videos</string>
    <string name="nueva_difusi_n">Nueva difusión</string>
    <string name="nuevo_grupo">Nuevo grupo</string>
    <string name="nueva_alerta">Nueva alerta</string>
    <string name="Account_Setting">Cuenta</string>
    <string name="notify_setting">Notificaciones</string>
    <string name="privacity_setting">Privacidad</string>
    <string name="questions_setting">Información y ayuda</string>
    <string name="perfil">Perfil</string>
    <string name="change_number">Cambiar número</string>
    <string name="privacity">Privacidad</string>
    <string name="delete_account">Eliminar cuenta</string>
    <string name="preview">Vista previa del mensajes</string>
    <string name="sound">Sonido</string>
    <string name="vibrations">Vibraciones</string>
    <string name="bloq_users">Contactos bloqueados</string>
    <string name="visible_map">Visible en el mapa</string>
    <string name="perfil_photo">Foto de perfil</string>
    <string name="group">Grupos</string>
    <string name="states">Estado</string>
    <string name="frequent_questions">Preguntas frecuentes</string>
    <string name="question">Hacer una pregunta</string>
    <string name="term_priv">Terminos y privacidad</string>
    <string name="open_source_projects">Bibliotecas de codigo abierto</string>
    <string name="Setting">Ajustes</string>
    <string name="new_group">Nuevo Grupo</string>
    <string name="StepGroupName">SIGUIENTE</string>
    <string name="GroupName">Nombre del grupo</string>
    <string name="Members">" Miembros"</string>
    <string name="delete_image_profile">Eliminar imagen</string>
    <string name="Gallery_up">Desde la galería</string>
    <string name="camera_up">Desde la cámara</string>
    <string name="new_broadcast">Difusión</string>
    <string name="str_members">Miembros</string>
    <string name="private_information">Información privada</string>
    <string name="profile_setting">Perfil</string>
    <string name="profile_name">Nombre de perfil</string>
    <string name="msj_description_name">Puedes eligir cualquier nombre con el cual seras conocido por otras personas dentro de la aplicación.\n\n Puedes usar cualquier caracter. La longitud maxima es de 50 caracteres.</string>
    <string name="state_profile">Estado</string>
    <string name="change_number_description">Al hacer tu cambio de número telefónico la información de tu cuenta , grupos , ajustes se movera al nuevo número.\n\n Antes de continuar asegúrate de que puedas recibir mensajes o llamadas al nuevo número telefónico.\n\n Al finalizar todos tus contactos van recibir una actualización de tu nuevo número telefónico</string>
    <string name="title_change_number">Cambiar número</string>
    <string name="get_new_number">Introduce el nuevo código del pais y el número telefonico.</string>
    <string name="Sounds_list">Tonos</string>
    <string name="title_activity_bottom">bottom</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
